--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,7 +3,7 @@ spring.devtools.restart.quiet-period=1s
 
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mariadb://localhost/guinessapp
+spring.datasource.url=jdbc:mariadb://localhost:3307/guinessapp
 spring.datasource.username=guinessapp
 spring.datasource.password=guinessapp
 
